syntax = "proto3";

option csharp_namespace = "LibraryGrpc";


package bookit;

service BookIt
{

    // Read single
    rpc ReadBook(ReadBookRequest) returns (ReadBookResponse) {
    }

    // Read list
    rpc ListBook(GetAllRequest) returns (GetAllResponse) {
    }

    // Update
    rpc UpdateBook(UpdateBookRequest) returns (UpdateBookResponse) {
    }

}


message ReadBookRequest
{
    int32 id = 1;
}

message ReadBookResponse
{
    int32 id = 1;
    string title = 2;
    string author = 3;
    string genre = 4;
    float rating = 5;
    bool availability = 6;
    int32 current_owner_id  = 7;
}

message GetAllRequest { }

message GetAllResponse
{
    repeated ReadBookResponse book = 1;
}

message UpdateBookRequest
{
    int32 id = 1;
    bool availability = 2;
    double rating = 3;
}

message UpdateBookResponse
{
    int32 id = 1;
}
    